<resources>
    <string name="app_name">crimanl intent</string>
    <string name="crime_title_hint">Enter a crime here</string>
    <string name="crime_title_label">title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="New_crime_show">New Crime</string>
    <string name="Crime_Suspect_text">Choose Crime Suspect</string>
    <string name="Crime_report_Text">Send Crime Report</string>
    <string name="Crime_report">%1$s! The crime was discoverd on %2$s. %3$s, and %4$s</string>
    <string name="Crime_report_solved">The case is solved</string>
    <string name="Crime_report_unsolved">The case is not solved</string>
    <string name="Crime_no_suspect">there is no suspect</string>
    <string name="Crime_Suspect">The suspect is %s</string>
    <string name="Crime_subject">subject</string>
    <string name="Send_Report">Send crime Report</string>

</resources>