<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context="Crime"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp">
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>
    <ImageView
        android:id="@+id/crime_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerInside"
        android:cropToPadding="true"
        android:background="@android:color/darker_gray">

    </ImageView>
        <ImageButton
            android:id="@+id/crime_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/btn_star">
        </ImageButton>


    <TextView
        android:id="@+id/Title"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"
        app:layout_constraintBottom_toTopOf="@+id/CrimeTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/CrimeTitle"
        android:layout_width="234dp"
        android:layout_height="120dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/crime_title_hint"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/Title"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <TextView
        android:id="@+id/textView"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label"
        app:layout_constraintBottom_toTopOf="@+id/crimeDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CrimeTitle" />

    <Button
        android:id="@+id/crimeDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="Wed Nov 14 11:56 EST 2018" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="328dp"
        android:layout_height="0dp"
        android:layout_marginBottom="416dp"
        android:text="@string/crime_solved_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crimeDate" />

    <ImageView
        android:id="@+id/crime_solved"
        android:layout_width="79dp"
        android:layout_height="68dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:src="@android:drawable/presence_online"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />

    <Button
        android:id="@+id/Crime_Suspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="304dp"
        android:text="@string/Crime_Suspect_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/crime_Report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="204dp"
        android:layout_marginBottom="232dp"
        android:text="@string/Crime_report_Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</LinearLayout>